add some tests and remove some broken BLAS stuff